objects/jiffle__Meeting__c.object
<CustomObject>
    <description>Used to store JiffleMeetings / activities.</description>
    <fields>
        <fullName>jiffle__Additional_Info__c</fullName>
        <label>Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>jiffle__Alternate_Host__c</fullName>
        <label>Alternate Host</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jiffle__Briefing_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Location</label>
        <referenceTo>jiffle__Briefing_Center__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Category__c</fullName>
        <inlineHelpText>In-person = Normal meeting without Vcon.
 Virtual     = These meetings will only have Vcon but no rooms (Note: Virtual event feature should be turned on).
 Hybrid     = If a meeting has both room and vCon.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person</fullName>
                    <default>true</default>
                    <label>In-Person</label>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>jiffle__Checkin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__Consecutive_Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related consecutive meeting.</description>
        <label>Consecutive Meeting</label>
        <referenceTo>jiffle__Consecutive_Meeting__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Duration__c</fullName>
        <description>Number of minutes the meeting lasted.</description>
        <formula>( jiffle__End_Date_Time__c - jiffle__Start_Date_Time__c )*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of minutes the meeting lasted.</inlineHelpText>
        <label>Duration (In Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jiffle__End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Event__c</fullName>
        <label>Event</label>
        <referenceTo>jiffle__Event__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Jiffle_Meetings_Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jiffle__From_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked if a meeting created from Lead.</description>
        <label>From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__JN_Custom_fields__c</fullName>
        <label>JN Meeting Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>jiffle__MeetingRequestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Meeting requestor (Lookup on Attendee)</description>
        <label>Meeting Requestor</label>
        <referenceTo>jiffle__Attendee__c</referenceTo>
        <relationshipLabel>Meetings Requested</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_ID__c</fullName>
        <label>Meeting ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_Location__c</fullName>
        <label>Meeting Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_Master__c</fullName>
        <label>Master Meeting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_Requestor__c</fullName>
        <label>Requestor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_Time_Zone__c</fullName>
        <description>To capture the JFX meetings timezone.</description>
        <label>Meeting Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Meeting UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_with__c</fullName>
        <label>Meeting with</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>jiffle__Session_Abstract__c</fullName>
        <label>Session Abstract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Session_ID__c</fullName>
        <label>Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Session_Name__c</fullName>
        <description>This field will hold the session name selected during meeting creation.</description>
        <label>Session Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Session_UUID__c</fullName>
        <label>Session UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Topic_UUID__c</fullName>
        <label>Topic UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Topic_of_Interest__c</fullName>
        <label>Topic of Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Track_UUID__c</fullName>
        <label>Track UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Track__c</fullName>
        <description>Holds Track of the meeting/nominations</description>
        <label>Track</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Vcon_Description__c</fullName>
        <label>Vcon Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>jiffle__Vcon_Link__c</fullName>
        <label>Vcon Link - DO NOT USE</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>jiffle__Vcon_Links__c</fullName>
        <label>Vcon Link</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>jiffle__All</fullName>
        <columns>NAME</columns>
        <columns>jiffle__Meeting_ID__c</columns>
        <columns>jiffle__Event__c</columns>
        <columns>jiffle__Meeting_Location__c</columns>
        <columns>jiffle__Meeting_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>jiffle__Request_Status__c</columns>
        <columns>jiffle__Start_Date_Time__c</columns>
        <columns>jiffle__Meeting_with__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>jiffle__Meeting_UUID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MT-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>